2009.10.31: David Nichols
	* changed decompression routines to a string to preserve binary data,
	  especially trailing nulls
	* fixed C++ QoreString constructor when taking ownership of a string
	  buffer to ensure that the buffer is null terminated when the 
	  allocated buffer is exactly equal to the string length

2009.10.30: David Nichols
	* use gnutar to package releases on darwin to avoid picking up useless
	  resource files

2009.10.21: David Nichols
	* fixed scanner to ignore quoted text in comments (i.e. "*/" will be
	  ignored

2009.10.20: David Nichols
	* fixed set_signal_handler() to accept a closure as per documentation
	* fixed internal C++ library function test_funcref_param() to return a
	  value for call references and closures
	* updated socket code to retry connect(), accept(), recv(), and send()
	  if interrupted by a signal
	* updated file code to retry read(), write() and fcntl() with F_SETLKW
	  if interrupted by a signal
	* updated select() in socket and file code to retry if interrupted by
	  a signal

2009.10.16: David Nichols
	* fixed broken access to private members of an object outside the
	  class; before it was possible to delete and reassign private members
	  from outside the class which should have been illegal

2009.10.12: David Nichols
	* updated XmlReader methods to throw exceptions on XML parsing errors
	  to be consistent with other methods
	* updated sending HTTP headers to send a single header multiple times
	  if the value is a list
        * fixed a typo in the C++ code in the File::open2() method that could
	  cause a crash

2009.10.10: David Nichols
	* fixed compiling on systems without xmlTextReaderSchemaValidate()

2009.10.09: David Nichols
	* implemented case == <exp> for soft matches in case expressions

2009.10.08: David Nichols
	* updated internal XML APIs; updated XmlReader class; documented
	  XmlReader class
	* if an HTTP header is received more than once, then make the value a
	  list in the hash returned